# dagonstar

./: .gitignore  AGENTS.md  README.md  dagon.ini.sample  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yml
dagon/: __init__.py  apptainer_task.py  batch.py  checkpoint.py  config.py  dag_tps.py  docker_task.py  faas.py  faas_models.py  faas_providers.py  faas_runner.py  kubernetes_task.py  llm.py  native.py  native_runner.py  nomad_task.py  remote.py  shell.py  task.py
dagon/api/: __init__.py
dagon/communication/: __init__.py  data_transfer.py  ssh.py
dagon/fair/: __init__.py  models.py  recorder.py  validate.py
dagon/iot/: __init__.py  model.py  registry.py  (+4 more)
docs/: README.md  architecture.md  asynch_launch.md  checkpoints.md  colab.md  compute_continuum.md  configuration.md  cwl_export.md  developer_guide.md  dynostore_integration.py  faas_cwl.md  faas_fair.md  faas_providers.md  faas_tasks.md  fair_principles.md  getting_started.md  introduction_to_scientific_workflow.md  iot_checkpointing.md  iot_cwl.md  iot_providers.md  iot_tasks.md  jupyter_notebook.md  llm_tasks.md  native_tasks.md  reference_guide.md  running_external_software.md  tasktype_interoperability.md  the_workflow_schema.md  the_workflow_schiema.md  user_guide.md  web_tasks.md
examples/: Transversal-cycle.py  Transversal-demo.py
tests/: __init__.py  helpers.py  native_functions.py  test_apptainer_task.py  test_checkpointing.py  test_config.py  test_cwl_example.py  test_docker_task.py  test_dynostore_examples.py  test_faas.py  test_failure_paths.py  test_fair.py  test_iot_task.py  test_kubernetes_task.py  test_llm.py  test_native.py  test_optional_integrations.py  test_packaging.py  test_security_configuration.py  test_shell_commands.py  test_staging.py  test_tasktype_interoperability.py  test_tutorial.py  test_web.py  test_workflow_core.py
tools/: validate_tutorial.py
(+282 files in other folders)
