[metadata]
name = dagonstar
version = 1.0.2
author = Raffaele Montella
author_email = raffaele.montella@uniparthenope.it
description = DAGon* is a simple Python based workflow engine able to run job on everything from the local machine to distributed virtual HPC clusters hosted in private and public clouds.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DagOnStar/dagonstar
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages =
    dagon
    dagon.api
    dagon.cloud
    dagon.communication
    dagon.ftp_publisher
    dagon.fair
    dagon.peer2peer
python_requires = >=3.8.15
install_requires =
    requests>=2.31.0,<3
    fabric3
    paramiko==3.4.1
    graphviz>=0.20.2,<1
    pycryptodome==3.20.0

[options.extras_require]
api =
    flask==2.2.2
    Flask-API==3.1
    werkzeug==2.2.2
cloud =
    apache-libcloud==3.8.0
    boto3==1.28.62
docker =
    docker==7.1.0
globus =
    globus_sdk==3.28.0
faas-aws =
    boto3>=1.28.62,<2
faas-azure =
    azure-identity>=1.15,<2
faas-gcp =
    google-auth>=2.25,<3
kubernetes =
    kubernetes==36.0.2
all =
    apache-libcloud==3.8.0
    boto3==1.28.62
    azure-identity>=1.15,<2
    google-auth>=2.25,<3
    docker==7.1.0
    flask==2.2.2
    Flask-API==3.1
    globus_sdk==3.28.0
    werkzeug==2.2.2
    kubernetes==36.0.2
